--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@ footer {
   <!-- 🔘 Navigation Buttons -->
   <div class="buttons">
     <a href="https://joneskys.github.io/jonny" target="_blank">📊 Dashboard</a>
-    <a href="https://joneskys.github.io/final" target="_blank">📊 Must Pick </a>
+    <a href="https://joneskys.github.io/final" target="_blank">✍🏻Must Pick </a>
+    <a href="https://cron-job.org" target="_blank">🧐 Stock Analysis </a>
     <a href="alert.html" target="_blank">🔔 Telegram Alerts</a>
     <a href="https://cron-job.org" target="_blank">⚙️ Settings of Alerts</a>
     
