--- a/test.html
+++ b/test.html
@@ -1,3 +1,166 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Global Market Dashboard</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #0f172a;
+  color: white;
+}
+
+.container {
+  max-width: 1000px;
+  margin: auto;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+  color: #38bdf8;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.card {
+  background: #1e293b;
+  padding: 15px;
+  border-radius: 14px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+}
+
+.value {
+  font-size: 20px;
+  color: #4ade80;
+  font-weight: bold;
+}
+
+.badge {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #2563eb;
+  padding: 6px 14px;
+  border-radius: 999px;
+  font-size: 14px;
+  z-index: 1000;
+}
+
+/* 🔘 Buttons */
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 20px 0;
+  flex-wrap: wrap;
+}
+
+.buttons a {
+  text-decoration: none;
+  background: #2563eb;
+  color: white;
+  padding: 10px 18px;
+  border-radius: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  transition: 0.2s;
+}
+
+.buttons a:hover {
+  background: #1d4ed8;
+}
+
+.status-panel {
+  position: fixed;
+  right: 10px;
+  bottom: 80px;
+  background: #020617;
+  border: 1px solid #1e293b;
+  padding: 12px;
+  border-radius: 12px;
+  font-size: 13px;
+  line-height: 1.7;
+  max-width: 240px;
+}
+
+.status-panel span {
+  color: #4ade80;
+  font-weight: bold;
+}
+
+footer {
+  margin-top: 30px;
+  padding: 15px;
+  text-align: center;
+  color: #94a3b8;
+  font-size: 14px;
+  border-top: 1px solid #1e293b;
+}
+
+.updated {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 13px;
+  color: #94a3b8;
+}
+</style>
+</head>
+
+<body>
+
+<div class="badge">⚡ Live Market Dashboard</div>
+
+<div class="container">
+  <h1>📊 Global Rates Dashboard</h1>
+
+  <!-- 🔘 Navigation Buttons -->
+  <div class="buttons">
+    <a href="https://joneskys.github.io/jonny" target="_blank">📊 Dashboard</a>
+    <a href="https://joneskys.github.io/final" target="_blank">✍🏻Must Pick </a>
+    <a href="https://cron-job.org" target="_blank">🧐 Stock Analysis </a>
+    <a href="alert.html" target="_blank">🔔 Telegram Alerts</a>
+    <a href="https://cron-job.org" target="_blank">⚙️ Settings of Alerts</a>
+    
+  </div>
+
+  <div class="grid">
+    <div class="card">
+      💵 USD → INR<br>
+      <div class="value" id="usdInr">Loading...</div>
+    </div>
+
+    <div class="card">
+      🪙 Gold (USD / oz)<br>
+      <div class="value" id="goldUsd">...</div><br>
+      Gold (INR / gram)<br>
+      <div class="value" id="goldInr">...</div>
+    </div>
+
+    <div class="card">
+      🥈 Silver (USD / oz)<br>
+      <div class="value" id="silverUsd">...</div><br>
+      Silver (INR / Kg)<br>
+      <div class="value" id="silverInr">...</div>
+    </div>
+  </div>
+
+  <div class="updated" id="lastUpdated">
+    Last updated: --
+  </div>
+
+  <footer>
+    Built by Solomon Jones Kodidety
+  </footer>
+</div>
+
 <script>
 async function loadData() {
   try {
@@ -76,3 +239,7 @@ function updateAsset(key, price, elementId) {
 loadData();
 setInterval(loadData, 60000);
 </script>
+
+
+</body>
+</html>
