--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer {
   <div class="buttons">
     <a href="https://joneskys.github.io/jonny" target="_blank">📊 Dashboard</a>
     <a href="https://joneskys.github.io/final" target="_blank">✍🏻Must Pick </a>
-    <a href="https://https://joneskys.github.io/global/analysis.html" target="_blank">🧐 Stock Analysis </a>
+    <a href="https://joneskys.github.io/global/analysis.html" target="_blank">🧐 Stock Analysis </a>
     <a href="alert.html" target="_blank">🔔 Telegram Alerts</a>
     <a href="https://cron-job.org" target="_blank">⚙️ Settings of Alerts</a>
     
