--- a/audio.html
+++ b/audio.html
@@ -25,8 +25,8 @@ Volume:
 </div>
 
 <div class="card">
-Folder <input id="f">
-File <input id="n">
+Folder <input id="f" value="33">
+File <input id="n" value="2">
 <button onclick="play()">Play</button>
 </div>
 
@@ -36,13 +36,14 @@ File <input id="n">
 const API = "https://lovelyideas.pythonanywhere.com/audio";
 for(let i=0;i<=30;i++) vol.innerHTML+=`<option>${i}</option>`;
 
-function post(d){
+function post(data){
  fetch(API,{
   method:"POST",
   headers:{'Content-Type':'application/json'},
-  body:JSON.stringify(d)
+  body:JSON.stringify(data)
  }).then(()=>msg.innerText="Command sent");
 }
+
 function setVol(){ post({volume:Number(vol.value)}); }
 function mute(m){ post({mute:m}); }
 function play(){ post({play:{folder:Number(f.value),file:Number(n.value)}}); }
